doc: add schemas, descriptions
