# src/controllers/auth-controller.js
@@ -2,6 +2,20 @@ import { handleRequestError } from "../errors/index.js";
 import { authService } from "../services/auth-service.js";
 
 async function registerUser(req, res) {
+  /*
+    #swagger.tags = ['Users']
+    #swagger.description = 'Route for register user.'
+    #swagger.parameters['obj'] = {
+      in: 'body',
+      name: 'Register',
+      description: 'Data for register user',
+      required: true,
+      schema: {
+        $ref: '#/definitions/registerSchemaSwagger',
+      },
+    },   
+  */
+
   const userToRegister = req.body;
 
   try {
@@ -13,6 +27,19 @@ async function registerUser(req, res) {
 }
 
 async function login(req, res) {
+  /*
+    #swagger.tags = ['Users']
+    #swagger.description = 'Route for user login.'   
+    #swagger.parameters['obj'] = {
+      in: 'body',
+      name: 'Login',
+      description: 'User entry for login',
+      required: true,
+      schema: {
+        $ref: '#/definitions/loginSchemaSwagger',
+      },
+    },
+  */
   const userToLogin = req.body;
 
   try {
