# src/models/transactions-schema.js
@@ -1,9 +1,10 @@
 import Joi from "joi";
+import j2s from "joi-to-swagger";
 
 const transactionTypes = ["incoming", "outgoing"];
 
 export const transactionCreateSchema = Joi.object({
-  valueAtCents: Joi.number().integer().greater(0).required(),
+  valueInCents: Joi.number().integer().greater(0).required(),
   description: Joi.string().min(4).max(30).required(),
   type: Joi.alternatives()
     .try(...transactionTypes)
@@ -12,7 +13,7 @@ export const transactionCreateSchema = Joi.object({
 });
 
 export const transactionUpdateSchema = Joi.object({
-  valueAtCents: Joi.number().integer().greater(0).optional(),
+  valueInCents: Joi.number().integer().greater(0).optional(),
   description: Joi.string().min(4).max(30).optional(),
   type: Joi.alternatives()
     .try(...transactionTypes)
@@ -23,3 +24,13 @@ export const transactionUpdateSchema = Joi.object({
 export const transactionParamsSchema = Joi.object({
   id: Joi.string().length(24).required(),
 });
+
+export const { swagger: transactionCreateSchemaSwagger } = j2s(
+  transactionCreateSchema
+);
+export const { swagger: transactionUpdateSchemaSwagger } = j2s(
+  transactionUpdateSchema
+);
+export const { swagger: transactionParamsSchemaSwagger } = j2s(
+  transactionParamsSchema
+);
