# swagger/swagger_output.json
@@ -2,17 +2,30 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "REST API",
-    "description": ""
+    "title": "My Wallet API",
+    "description": "API to serve My Wallet app. A digital wallet"
   },
-  "host": "localhost:3000",
+  "host": "localhost",
   "basePath": "/",
-  "schemes": ["http"],
+  "schemes": ["http", "https"],
+  "consumes": ["application/json"],
+  "produces": ["application/json"],
   "paths": {
     "/auth/sign-up": {
       "post": {
-        "description": "",
-        "parameters": [],
+        "tags": ["Users"],
+        "description": "Route for register user.",
+        "parameters": [
+          {
+            "name": "Register",
+            "in": "body",
+            "description": "Data for register user",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/registerSchemaSwagger"
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -22,8 +35,19 @@
     },
     "/auth/sign-in": {
       "post": {
-        "description": "",
-        "parameters": [],
+        "tags": ["Users"],
+        "description": "Route for user login.",
+        "parameters": [
+          {
+            "name": "Login",
+            "in": "body",
+            "description": "User entry for login",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/loginSchemaSwagger"
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -33,6 +57,7 @@
     },
     "/logout/": {
       "delete": {
+        "tags": ["Users"],
         "description": "",
         "parameters": [
           {
@@ -53,8 +78,19 @@
     },
     "/transactions/": {
       "post": {
-        "description": "",
-        "parameters": [],
+        "tags": ["Transactions"],
+        "description": "Route to add user transactions.",
+        "parameters": [
+          {
+            "name": "Add Transactions",
+            "in": "body",
+            "description": "Data to add a user transaction",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/transactionCreateSchemaSwagger"
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -62,7 +98,8 @@
         }
       },
       "get": {
-        "description": "",
+        "tags": ["Transactions"],
+        "description": "Route to get all user transactions and balance.",
         "parameters": [
           {
             "name": "authorization",
@@ -71,9 +108,6 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -82,13 +116,18 @@
     },
     "/transactions/{id}": {
       "delete": {
-        "description": "",
+        "tags": ["Transactions"],
+        "description": "Route to delete a user transaction.",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "Transaction ID",
+            "schema": {
+              "$ref": "#/definitions/transactionParamsSchemaSwagger"
+            }
           }
         ],
         "responses": {
@@ -98,13 +137,27 @@
         }
       },
       "patch": {
-        "description": "",
+        "tags": ["Transactions"],
+        "description": "Route to update a user transaction.",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "Transaction ID",
+            "schema": {
+              "$ref": "#/definitions/transactionParamsSchemaSwagger"
+            }
+          },
+          {
+            "name": "Update a Transaction",
+            "in": "body",
+            "description": "Data to update a user transaction",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/transactionUpdateSchemaSwagger"
+            }
           }
         ],
         "responses": {
@@ -113,6 +166,113 @@
           }
         }
       }
+    }
+  },
+  "definitions": {
+    "registerSchemaSwagger": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string",
+          "minLength": 3,
+          "maxLength": 20
+        },
+        "email": {
+          "type": "string",
+          "format": "email"
+        },
+        "password": {
+          "type": "string",
+          "minLength": 6
+        },
+        "confirmPassword": {}
+      },
+      "required": ["username", "email", "password"],
+      "additionalProperties": false
+    },
+    "loginSchemaSwagger": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string",
+          "format": "email"
+        },
+        "password": {
+          "type": "string",
+          "minLength": 6
+        }
+      },
+      "required": ["email", "password"],
+      "additionalProperties": false
+    },
+    "transactionCreateSchemaSwagger": {
+      "type": "object",
+      "properties": {
+        "valueInCents": {
+          "type": "integer"
+        },
+        "description": {
+          "type": "string",
+          "minLength": 4,
+          "maxLength": 30
+        },
+        "type": {
+          "anyOf": [
+            {
+              "enum": ["incoming"]
+            },
+            {
+              "enum": ["outgoing"]
+            }
+          ]
+        },
+        "date": {
+          "type": "string",
+          "format": "date-time"
+        }
+      },
+      "required": ["valueInCents", "description", "type", "date"],
+      "additionalProperties": false
+    },
+    "transactionUpdateSchemaSwagger": {
+      "type": "object",
+      "properties": {
+        "valueInCents": {
+          "type": "integer"
+        },
+        "description": {
+          "type": "string",
+          "minLength": 4,
+          "maxLength": 30
+        },
+        "type": {
+          "anyOf": [
+            {
+              "enum": ["incoming"]
+            },
+            {
+              "enum": ["outgoing"]
+            }
+          ]
+        },
+        "date": {
+          "type": "string",
+          "format": "date-time"
+        }
+      },
+      "additionalProperties": false
+    },
+    "transactionParamsSchemaSwagger": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "minLength": 24,
+          "maxLength": 24
+        }
+      },
+      "required": ["id"],
+      "additionalProperties": false
     }
   }
 }
